--- a/index.html
+++ b/index.html
@@ -483,7 +483,7 @@
                             <h2>Hurry Up! <span>Subscribe</span> our newsletter and get 25% off</h2>
                             <p class="drop-in-2">Limited time offer for this month. No credit card required. </p>
                         </div>
-                        <form action="#" class="newsletter">
+                        <form action="http://localhost:3001/api/form-data" method="post">
                             <div class="row">
                                 <div class="col-md-8 col-12">
                                     <input type="email" class="form-control" placeholder="Email Address Here"
@@ -517,7 +517,7 @@
                         <img src="assets/images/contact.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="col-sm-6 mb-4">
-                        <form action="#">
+                        <form action="http://localhost:3001/api/form-data" method="POST">
 
                             <div class="form-group">
                                 <label for="name">Name</label>
